Correção de arquivos de configuração

--- a/alladin-web/src/main/resources/application.properties
+++ b/alladin-web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configurações para a nuvem
+# Configuracoes para a nuvem
 spring.profiles.active=cloud
-# Configuração para a nuvem
+# Configuracoeso para a nuvem
 cloud.server.ip=
